--- a/CougarOS/FILESYSTEM/sys/TODO
+++ b/CougarOS/FILESYSTEM/sys/TODO
@@ -1,14 +1,11 @@
 ﻿# WORK IN PROGRESS
-- master api
-	- filesystem api
-	- math api
-	- system api
 
 
 
 
 
 # No. 1 Priority
+- open already created files in notepad
 
 
 
@@ -17,6 +14,8 @@
 # No. 2 Priority
 - each user has their own config
 - if any necessary file is missing, repair the os
+- repair 'dir' function
+- repair 'ls' function
 
 
 
